--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
 
         </div>
     </footer>
+    <script type="text/javascript" src="//api.venyoo.ru/wnew.js?wc=venyoo/default/science&widget_id=6459940496605192009"></script>
 
 </body>
 </html>
+
