--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="footer-btn-col">
                 <div class="support-label">По всем вопросам поддержки<br>мы доступны в Телеграм:</div>
                 
-                <a href="https://t.me/YOUR_BOT" target="_blank" class="tg-btn-universal">
+                <a href="https://t.me/suppport_mvp_aibot?start=2-C8f1ScUKLL97ECD_eap7HzrQ" target="_blank" class="tg-btn-universal">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M20.665 3.717L2.964 10.556C1.756 11.041 1.761 11.716 2.741 12.016L7.284 13.433L17.794 6.801C18.291 6.499 18.747 6.663 18.374 6.995L9.856 14.678L9.853 14.681L9.542 19.317C9.998 19.317 10.199 19.109 10.455 18.862L12.627 16.751L17.142 20.086C17.974 20.544 18.572 20.306 18.78 19.313L21.739 5.378C22.043 4.159 21.272 3.606 20.665 3.717Z" fill="#000000"/>
                     </svg>
@@ -245,4 +245,5 @@
 
 </body>
 </html>
+
 
